We are trying to implement the login portion

--- a/newnergy/app/views/account/unverified.scala.html
+++ b/newnergy/app/views/account/unverified.scala.html
@@ -1,6 +1,8 @@
+@import helper._
 @import views.html.commons._
+@import com.feth.play.module.pa.views.html._
 
-@main("Unverified User"){
+@main(""){
 	<div class="container">
 	<h1>@Messages("playauthenticate.verify.account.title")</h1>
 	<p>
