--- a/newnergy/app/views/account/login.scala.html
+++ b/newnergy/app/views/account/login.scala.html
@@ -1,4 +1,4 @@
-@(signupForm: Form[_])
+@(loginForm: Form[_])
 
 @import helper._
 @import views.html.commons._
@@ -6,7 +6,7 @@
 @implicitFieldConstructor = @{ b3.horizontal.fieldConstructor("col-md-2", "col-md-8") }
 @shortFC = @{ b3.horizontal.fieldConstructor("col-md-2", "col-md-4") }
 
-@main("Account Information") {
+@main("login") {
 
 	<div class="container">
   <div class="page-header">
@@ -15,42 +15,23 @@
 
   <fieldset>
   	<legend>User Information</legend>
-	@b3.form(action = routes.Application.doSignup()) {
-		@b3.text(signupForm("name"), 
-			'_label -> "Name",
-			'value -> "Camilo"
-		)(shortFC, implicitly[Messages])
-		
-		@b3.text(signupForm("phone"),
-        '_label -> "Phone",
-        'maxlength -> 20,
-        'placeholder -> "(XXX) XXX-XXXX",
-        'help -> "i.e. (123) 456-7890",
-        'value -> "(937) 607-3549"
-      )(shortFC, implicitly[Messages])
+	@b3.form(action = routes.Application.doLogin()) {
       
-      @b3.text(signupForm("email"),
+      @b3.text(loginForm("email"),
         '_label -> "Email",
         'maxlength -> 50,
         'placeholder -> "Email",
         'value -> "jcuzquia@gmail.com"
         )
         
-        @b3.password(signupForm("password"), 
+        @b3.password(loginForm("password"), 
         	'_label -> "Password",
         	'placeholder -> "Password")
         
         
-        @b3.password(signupForm("repeatpassword"), 
-        	'_label -> "Repeat Password",
-        	'placeholder -> "Repeat Password")
-        
-        
-        
-        
        <div class="form-group">
         <div class="col-md-4">
-          <input type="submit" class="btn btn-success" value="Submit"/>
+          <input type="submit" class="btn btn-success" value="Login"/>
           <button type="button" class="btn btn-warning"
                    value="cancel">Cancel</button>
         </div>
