--- a/newnergy/app/views/commons/main.scala.html
+++ b/newnergy/app/views/commons/main.scala.html
@@ -10,8 +10,34 @@
 		@head_section(title)        
     </head>
     <body>
+    <br><br><br><br>
     	@nav_bar()
-    	<br><br>
+    	
+    	@if(flash.contains(Application.FLASH_ERROR_KEY)) {
+    		<div class="alert alert-danger" role="alert">
+    			<button type="button" class="close" data-dismiss="alert">
+    				<span aria-hidden="false"> 
+    					&times;
+    				</span>
+    				<span class="sr-only">
+    					Close
+    				</span>
+    			</button>
+    		</div>
+    	}
+    	
+    	@if(flash.contains(Application.FLASH_MESSAGE_KEY)) {
+                <div class="alert alert-success" role="alert">
+                    <button type="button" class="close" data-dismiss="alert">
+                    	<span aria-hidden="false">&times;</span>
+                    	<span class="sr-only">
+                        	Close
+                        </span>
+                    </button>
+                    @flash().get(Application.FLASH_MESSAGE_KEY)
+                </div>
+            }
+    	
         @content
     </body>
 </html>
