--- a/newnergy/app/views/commons/nav_bar.scala.html
+++ b/newnergy/app/views/commons/nav_bar.scala.html
@@ -1,36 +1,67 @@
-
-
+@(nav: String = "")
 @import be.objectify.deadbolt.java.views.html._
 @import be.objectify.deadbolt.core.utils.TemplateUtils._
 
+
 <nav class="navbar navbar-inverse navbar-fixed-top">
-	<div class="container">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed"
-				data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-				aria-controls="navbar">
-				<span class="sr-only">Toggle navigation</span> <span
-					class="icon-bar"></span> <span class="icon-bar"></span> <span
-					class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand" href="#">Your Newnergy</a>
-		</div>
-		<div id="navbar" class="navbar-collapse collapse">
-			<form class="navbar-form navbar-right">
-				<div class="form-group">
-					<input type="text" placeholder="Email" class="form-control">
-				</div>
-				<div class="form-group">
-					<input type="password" placeholder="Password" class="form-control">
-				</div>
-				@subjectNotPresent(){
-					<button type="button" class="btn btn-success"
-					onclick="window.location='@routes.Application.signup()';">Sign
-					me up!</button>
-				}
-				
-			</form>
-		</div>
-		<!--/.navbar-collapse -->
-	</div>
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button"
+          class="navbar-toggle collapsed" 
+          data-toggle="collapse" 
+          data-target="#navbar" 
+          aria-expanded="false" 
+          aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+          </button>
+          <a class="navbar-brand" href="@routes.Application.index()">Newnergy</a>
+        </div>
+        
+        
+            <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li class="@("active".when(nav == ""))">
+							<a 
+								href="@routes.Application.index()">@Messages("playauthenticate.navigation.home")
+							</a>
+						</li>
+                        <li class="@("active".when(nav == "restricted"))">
+							<a href="">
+								@Messages("playauthenticate.navigation.restricted")
+							</a>
+						</li>
+
+                        @subjectNotPresent() {
+                            <li class="@("active".when(nav == "signup"))">
+								<a href="@routes.Application.signup()">
+									@Messages("playauthenticate.navigation.signup")
+								</a>
+							</li>
+                        }
+                    </ul>
+
+                    @subjectPresentOr() {
+                        <ul class="nav navbar-nav navbar-right">
+                        @defining(Application.getLocalUser(session())) { user =>
+                            
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-user"></i> @user.name <span class="caret"></span></a>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li class="@("active".when(nav == "profile"))"><a href="@routes.Application.profile()">@user.name</a></li>
+                                    <li><a href="">@Messages("playauthenticate.navigation.link_more")</a></li>
+                                    <li class="divider"></li>
+                                    <li><a href=""><i class="icon-off"></i> @Messages("playauthenticate.navigation.logout")</a></li>
+                                </ul>
+                            </li>
+                        }
+                        </ul>
+                    } {
+                        <a href="@routes.Application.login()" 
+						class=" navbar-right btn btn-default navbar-btn @("disabled".when(nav == "login"))">@Messages("playauthenticate.navigation.login")</a>
+                    }
+
+                </div><!-- /.navbar-collapse -->
+        
+      </div>
 </nav>
