1 added logout functionality 2 made the navbar dynamic with the change of pages

--- a/newnergy/app/views/commons/main.scala.html
+++ b/newnergy/app/views/commons/main.scala.html
@@ -10,8 +10,10 @@
 		@head_section(title)        
     </head>
     <body>
-    <br><br><br><br>
-    	@nav_bar()
+   
+    	@nav_bar(nav)
+    	 <br><br><br><br>
+    	
     	
     	@if(flash.contains(Application.FLASH_ERROR_KEY)) {
     		<div class="alert alert-danger" role="alert">
