--- a/newnergy/app/views/index.scala.html
+++ b/newnergy/app/views/index.scala.html
@@ -1,8 +1,8 @@
-@(message: String)
+@(nav: String)
 
 @import views.html.commons._
 
-@main(message){
+@main("home", nav){
 <body>
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
