Added a few more pages and started the dashboard implementation.

--- a/newnergy/app/views/index.scala.html
+++ b/newnergy/app/views/index.scala.html
@@ -2,7 +2,7 @@
 
 @import views.html.commons._
 
-@main("home", nav){
+@main("Home", nav){
 <body>
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
