Added Dashboard and controller to start processing the interval data and then pass it to highcharts

--- a/newnergy/app/views/commons/head_section.scala.html
+++ b/newnergy/app/views/commons/head_section.scala.html
@@ -10,8 +10,8 @@
 <meta content="IE=edge" http-equiv="X-UA-Compatible">
 <meta name="MSSmartTagsPreventParsing" content="true" />
 
-<meta name="description" content="Consulting Inc Services" />
-<meta name="keywords" content="Consulting, Services" />
+<meta name="description" content="Newnergy" />
+<meta name="keywords" content="Newnergy, Services" />
 
 <title>@title</title>
 
@@ -24,13 +24,5 @@
 
 <link rel="stylesheet" media="screen" href='@routes.Assets.at("stylesheets/custom_layout.css")'>
 
-<!-- Javascript -->
-<script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))'></script>
+<link rel="stylesheet" media="screen" href='@routes.Assets.at("stylesheets/dashboard.css")'>
 
-<script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.min.js"))'></script>
-
-<script type='text/javascript' src='@routes.Assets.at("bootstrap-datepicker/js/bootstrap-datepicker.js")'></script>
-
-<script type='text/javascript' src='@routes.Assets.at("javascripts/custom_handler.js")'></script>
-
-<script type="text/javascript" src="@routes.Application.jsRoutes" defer="defer"></script>
