--- a/newnergy/app/views/commons/nav_bar.scala.html
+++ b/newnergy/app/views/commons/nav_bar.scala.html
@@ -54,7 +54,7 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-user"></i> @user.name <span class="caret"></span></a>
                                 <ul class="dropdown-menu" role="menu">
                                     <li class="@("active".when(nav == "profile"))"><a href="@routes.Application.profile()">@Messages("playauthenticate.navigation.profile")</a></li>
-                                    <li><a href="@routes.Application.dashboard()">Dashboard</a></li>
+                                    <li><a href="@routes.Application.dashboard("")">Dashboard</a></li>
                                     <li class="divider"></li>
                                     <li><a href="@com.feth.play.module.pa.controllers.routes.AuthenticateDI.logout()"><i class="icon-off"></i> @Messages("playauthenticate.navigation.logout")</a></li>
                                 </ul>
