--- a/newnergy/app/views/dashboard_main.scala.html
+++ b/newnergy/app/views/dashboard_main.scala.html
@@ -1,30 +1,34 @@
-@(localUser: User)(nav: String)(controller: => Html)
+@(localUser: User)(nav: String)(controller: => Html)(my_projects : => Html)
 @import views.html.commons._
 
 @main("Dashboard", nav) {
-
-<div class="row">
-	<div class="col-sm-3 col-md-2 sidebar">
-		<ul class="nav nav-pills nav-stacked">
-			<li class="active"><a data-toggle="pill" href="#my-meter">My Meter</a></li>
-			<li role="presentation"><a data-toggle="pill" href="#other">Other</a></li>
-			<li role="presentation"><a href="#">Messages</a></li>
-		</ul>
-	</div>
-	 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-	 	<div class="tab-content">
-	 		<div id="my-meter" class="tab-pane fade in active">
-	 			@controller
-	 		</div>
-	 	
-		 	<div class="tab-pane fade" id="other">
-		 		<h1 class="page-header">Other</h1>
+<div class="container">
+	<div class="row">
+		<div class="col-sm-3 col-md-2 sidebar">
+		<h2>My Dashboard</h2>
+			<ul class="nav nav-pills nav-stacked">
+				<li class="active"><a data-toggle="pill" href="#my-projects">My Projects</a></li>
+				<li role="presentation"><a data-toggle="pill" href="#my-meter">My Meter</a></li>
+				<li role="presentation"><a data-toggle="pill" href="#other">Other</a></li>
+				<li role="presentation"><a href="#">Messages</a></li>
+			</ul>
+		</div>
+		 <div class="col-sm-12 col-sm-offset-2 col-md-12 main col-md-offset-0">
+		 	<div class="tab-content">
+		 		<div class="tab-pane fade in active" id="my-projects">
+			 		@my_projects
+			 	</div>
+		 		
+		 		<div id="my-meter" class="tab-pane fade col-md-12">
+		 			@controller
+		 		</div>
+		 	
+			 	<div class="tab-pane fade" id="other">
+			 		
+			 	</div>
 		 	</div>
-	 	</div>
-	 	
-          
-     </div>
+	     </div>
+	</div>
 </div>
-
 
 }
