Added delete functionality for project and Meter models. Additionally we are able to switch tabs in the project_page

--- a/newnergy/app/views/commons/foot_section.scala.html
+++ b/newnergy/app/views/commons/foot_section.scala.html
@@ -6,7 +6,7 @@
 
 <script type='text/javascript' src='@routes.Assets.at("bootstrap-datepicker/js/bootstrap-datepicker.js")'></script>
 
-<script type='text/javascript' src='@routes.Assets.at("javascripts/custom_handler.js")'></script>
+<script type='text/javascript' src='@routes.Assets.at("javascripts/newnergy.js")'></script>
 
 <script type='text/javascript' src='@routes.Application.jsRoutes()' defer="defer"></script>
 
@@ -20,4 +20,4 @@
 
 <script type="text/javascript" src='@routes.Assets.at("javascripts/heat-map-meter.js")'></script>
 
-<script type="text/javascript" src='@routes.DashboardController.jsDashboardRoutes()'></script>
+<script type="text/javascript" src='@routes.ProjectController.jsProjectRoutes()'></script>
