--- a/newnergy/app/views/dashboard_main.scala.html
+++ b/newnergy/app/views/dashboard_main.scala.html
@@ -1,4 +1,4 @@
-@(localUser: User)(nav: String)(controller: => Html)(my_projects : => Html)
+@(localUser: User)(nav: String)(my_projects : => Html)
 @import views.html.commons._
 
 @main("Dashboard", nav) {
@@ -19,10 +19,6 @@
 			 		@my_projects
 			 	</div>
 		 		
-		 		<div id="my-meter" class="tab-pane fade col-md-12">
-		 			@controller
-		 		</div>
-		 	
 			 	<div class="tab-pane fade" id="other">
 			 		
 			 	</div>
