Successfully importing multiple meters and setting the limits in highchart dynamic depending on the meter.

--- a/newnergy/app/views/commons/foot_section.scala.html
+++ b/newnergy/app/views/commons/foot_section.scala.html
@@ -20,4 +20,4 @@
 
 <script type="text/javascript" src='@routes.Assets.at("javascripts/heat-map-meter.js")'></script>
 
-<script type="text/javascript" src='@routes.ProjectController.jsProjectRoutes()'></script>
+<script type="text/javascript" src='@controllers.routes.ProjectController.jsProjectRoutes()'></script>
