--- a/newnergy/app/views/project/heatmap_gui.scala.html
+++ b/newnergy/app/views/project/heatmap_gui.scala.html
@@ -1,4 +1,4 @@
-@(title : String)(meter : Meter)
+@(title : String)
 
 @import views.html.helper._
 
@@ -26,8 +26,4 @@
 }
 
 <div id="hc-container" style="min-width: 1000px; max-width: 1000px; height: 400px; margin: 0 auto"></div>
-<pre id="heatmap-data">
-Date,Time,Temperature
 
-
-</pre>
