During this we started working on an HTML page Factory. Additionally the time series page is on development and the daily matrix of data is being implemented.

--- a/newnergy/app/views/project/project_page.scala.html
+++ b/newnergy/app/views/project/project_page.scala.html
@@ -1,4 +1,4 @@
-@(project: Project)(mode: String)(meterListPage: Html)(heatmapGui: Html)(meter : models.Meter = null)
+@(project: Project)(mode: String)(meterListPage: Html)(heatmapGui: Html)
 
 @import views.html.commons._ 
 @import views.html.helper._
