Completed the time series with new models. Additionally we are retrieving and sending the correct checkbox values fr daytype. Next is to generate comma delimited <pre> tags that get all of the DayTypes separated

--- a/newnergy/app/views/project/meter_list.scala.html
+++ b/newnergy/app/views/project/meter_list.scala.html
@@ -36,7 +36,7 @@
 			<td id="code-@meter.id">@meter.id</td>
 			<td>
 				<button class="btn-success meter-button" id="meter-button-@meter.id" type="button"
-							onclick="showHeatMap('@routes.ProjectController.showMeterHeatMap(meter.id)','@meter.id');">
+							onclick="window.location = '@routes.ProjectController.showMeterPage(meter.id)';">
 							 Check Meter @meter.id
 				</button>
 			</td>
