--- a/newnergy/app/views/project/time_series_page.scala.html
+++ b/newnergy/app/views/project/time_series_page.scala.html
@@ -1,49 +1,76 @@
-@(project: Project)(mode: String)(meterListPage: Html)(timeSeriesGui: Html)(meter : models.Meter = null)
+@(project: Project)(mode: String)(meter : models.Meter = null)
 
 @import views.html.commons._ 
 @import views.html.helper._
-
-@main("Project Page"){
+@main("Meter Page"){
 <div class="container">
-	<div class="row">
-		<div class="col-sm-3 col-md-2 sidebar">
-		<h2>@project.title</h2>
-			<ul class="nav nav-pills nav-stacked" id="#projectTabs" role="tablist">
-				<li class="@("active".when(mode=="My Meters"))" role="presentation">
-					<a data-toggle="tab" 
-						href="#my-meters" 
-						aria-controls="meters" role="tab">
-						My Meters
-					</a>
-				</li>
-				<li class="@("active".when(mode=="Meter Heat Map"))" role="presentation">
-					<a data-toggle="tab" href="#heatmap" aria-controls="heatmap"
-						role="tab">
-							Heatmap
-					</a>
-				</li>
-				<li role="presentation"><a href='@routes.ProjectController.showDailyTimeSeries(meter.id)'>Time Series</a></li>
-				<li role="presentation"><a href="#">Messages</a></li>
-			</ul>
-		</div>
-		<div class="col-sm-12 col-sm-offset-2 col-md-12 main col-md-offset-0">
-		 	<div class="tab-content">
-		 		<div class="tab-pane" id="my-meters" role="tabpanel">
-			 		@meterListPage
-		 		</div>
-		 		<div id="heatmap" class="tab-pane fade in active col-md-12" role="tabpanel">
-		 		
-		 		</div id="time-series">
-		 			
-			 	<div class="tab-pane fade in active col-md-12" id="other">
-			 		@timeSeriesGui
-			 	</div>
-		 	</div>
-	     </div>
-	</div>
+
+      <div class="row row-offcanvas row-offcanvas-right">
+
+        <div class="col-xs-12 col-sm-9">
+          <p class="pull-right visible-xs">
+            <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
+          </p>
+          <a href="@routes.ProjectController.showProject(project.id, 0)"><h2>@project.title</h2></a>
+          <div id="jumbotron_hc" class="jumbotron">
+          
+			<div id="daily_series_container" style="min-width: 800px; max-width: 1000px; height: 600px; margin: 0 auto"></div>
+
+          </div>
+          <div class="row">
+            <div id="time_series_table_div" class="col-xs-6 col-lg-3">
+              <h3>DayType Control</h3>
+              <table id="daytypecheckboxlist" class="table table-striped table-bordered">
+              	<thead>
+       				<tr>
+	       				<th></th>
+						<th>Day Type</th>
+   					</tr>
+    			</thead>
+    			<tbody>
+    			@for(typeDay <- meter.dayTypeList){
+    				<tr>
+    					<td><div>
+    						<input class="dayType-chk" id="@typeDay.dayType-checkbox" type="checkbox" 
+	    						name="@typeDay.dayType" 
+	    						value="@typeDay.dayType"
+	    						onclick=activateDayType(this.name,this.id) @if(typeDay.isSelected){checked}>
+	    					</div>
+	    				</td>
+    					<td>@typeDay.dayType</td>
+    				</tr>
+    			}
+    			</tbody>
+              </table>
+            </div><!--/.col-xs-6.col-lg-4-->
+            
+          </div><!--/row-->
+        </div><!--/.col-xs-12.col-sm-9-->
+
+        <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
+          <div class="list-group">
+            <a href="@routes.ProjectController.showMeterPage(meter.id)" class="list-group-item">Heat Map</a>
+            <a href="@routes.ProjectController.showDailyTimeSeries(meter.id)" class="list-group-item active">Time Series</a>
+            <a href="#" class="list-group-item">Link</a>
+            <a href="#" class="list-group-item">Link</a>
+            <a href="#" class="list-group-item">Link</a>
+            <a href="#" class="list-group-item">Link</a>
+            <a href="#" class="list-group-item">Link</a>
+            <a href="#" class="list-group-item">Link</a>
+            <a href="#" class="list-group-item">Link</a>
+            <a href="#" class="list-group-item">Link</a>
+          </div>
+        </div><!--/.sidebar-offcanvas-->
+	</div><!--/row-->
+</div><!--/.container-->
+
+<div>
+
 </div>
 
+
 @*All the meter information is located here*@
+<pre id="meterId" style="display: none">@meter.id</pre>
 <pre id="startYear" style="display: none">@meter.startYear</pre>
 <pre id="startMonth" style="display: none">@meter.startMonth</pre>
 <pre id="startDay" style="display: none">@meter.startDay</pre>
@@ -52,30 +79,41 @@
 <pre id="endDay" style="display: none">@meter.endDay</pre>
 <pre id="maxKWh" style="display: none">@meter.maxKWh</pre>
 <pre id="minKWh" style="display: none">@meter.minKWh</pre>
-@*<pre id="heatmap-data" style="display: none">Date,Time,Temperature
-
+<pre id="heatmap-data" style="display: none">Date,Time,Temperature
+@*
 @if(meter == null){
 	<h1>                 No meter passed</h1>
 }else{@for(dataList <- meter.dataList){@dataList.getDateString,@dataList.getTime,@dataList.getKWh
 }
-
-
 }
-
-</pre>
 *@
-
-<pre id="heatmap-data" style="display: none">@for(dailyData <- meter.dailyDataList){
-		@dailyData.getDateValue
-}
 </pre>
 }
 
+<pre id="csv" style="display: none"></pre>
+@*
+@for(dailyData <- meter.dailyDataList){@dailyData.csvString}*@
 
-
-
-
-
-
-
+<script typer="text/javascript" charset="utf-8">
+var meterId = document.getElementById("meterId").innerHTML
+window.onload = showDailyTimeSeries(meterId);
+	
+	function showDailyTimeSeries(meterId){
+	//alert(meterId);
+	var r = jsProjectRoutes.controllers.ProjectController.getTimeSeriesJson(meterId);
+	$.ajax({
+		url: r.url,
+		dataType: 'json',
+		success: function(data) {
+			$("#csv").html(data);
+			loadChart();
+		}, 
+		error: function(){
+			alert("error in time series chart");
+		}
+	});
+	
+	alert(meterId);
+}
+</script>
 
