--- a/newnergy/app/views/commons/foot_section.scala.html
+++ b/newnergy/app/views/commons/foot_section.scala.html
@@ -20,4 +20,6 @@
 
 <script type="text/javascript" src='@routes.Assets.at("javascripts/heat-map-meter.js")'></script>
 
+<script type="text/javascript" src='@routes.Assets.at("javascripts/daily_time_series.js")'></script>
+
 <script type="text/javascript" src='@controllers.routes.ProjectController.jsProjectRoutes()'></script>
