--- a/newnergy/app/views/commons/head_section.scala.html
+++ b/newnergy/app/views/commons/head_section.scala.html
@@ -26,3 +26,4 @@
 
 <link rel="stylesheet" media="screen" href='@routes.Assets.at("stylesheets/dashboard.css")'>
 
+<link rel="stylesheet" media="screen" href='@routes.Assets.at("stylesheets/main.css")'>
