--- a/newnergy/app/views/project/meter_page.scala.html
+++ b/newnergy/app/views/project/meter_page.scala.html
@@ -55,7 +55,7 @@
         <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
           <div class="list-group">
             <a href="@routes.ProjectController.showMeterPage(meter.id)" class="list-group-item active">Heat Map</a>
-            <a href="@routes.ProjectController.showDailyTimeSeries(meter.id)" class="list-group-item">Time Series</a>
+            <a href="@routes.TimeSeriesController.showTimeSeriesPage(meter.id)" class="list-group-item">Time Series</a>
             <a href="#" class="list-group-item">Link</a>
             <a href="#" class="list-group-item">Link</a>
             <a href="#" class="list-group-item">Link</a>
