--- a/newnergy/app/views/project/time_series_page.scala.html
+++ b/newnergy/app/views/project/time_series_page.scala.html
@@ -50,7 +50,7 @@
         <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
           <div class="list-group">
             <a href="@routes.ProjectController.showMeterPage(meter.id)" class="list-group-item">Heat Map</a>
-            <a href="@routes.ProjectController.showDailyTimeSeries(meter.id)" class="list-group-item active">Time Series</a>
+            <a href="@routes.TimeSeriesController.showTimeSeriesPage(meter.id)" class="list-group-item active">Time Series</a>
             <a href="#" class="list-group-item">Link</a>
             <a href="#" class="list-group-item">Link</a>
             <a href="#" class="list-group-item">Link</a>
@@ -93,27 +93,12 @@
 <pre id="csv" style="display: none"></pre>
 @*
 @for(dailyData <- meter.dailyDataList){@dailyData.csvString}*@
-
+  
 <script typer="text/javascript" charset="utf-8">
-var meterId = document.getElementById("meterId").innerHTML
+var meterId = document.getElementById("meterId").innerHTML;
 window.onload = showDailyTimeSeries(meterId);
 	
-	function showDailyTimeSeries(meterId){
-	//alert(meterId);
-	var r = jsProjectRoutes.controllers.ProjectController.getTimeSeriesJson(meterId);
-	$.ajax({
-		url: r.url,
-		dataType: 'json',
-		success: function(data) {
-			$("#csv").html(data);
-			loadChart();
-		}, 
-		error: function(){
-			alert("error in time series chart");
-		}
-	});
-	
 	alert(meterId);
-}
+
 </script>
 
